// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom link with useLinkPressHandler navigates to the new view 1`] = `
<View>
  <Text>
    Home
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text>
      About
    </Text>
  </View>
</View>
`;

exports[`Custom link with useLinkPressHandler navigates to the new view 2`] = `
<View>
  <Text>
    About
  </Text>
</View>
`;
